--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -45,5 +45,5 @@ app.seed.images=false
 # ===== Actuator (Prometheus Metrics) =====
 management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.prometheus.enabled=true
-management.metrics.export.prometheus.enabled=true
+management.prometheus.metrics.export.enabled=true
 management.endpoints.web.base-path=/actuator
