--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -60,69 +60,16 @@ jobs:
           npm run test --if-present
 
   # =========================
-  # Build & Push Backend Image
-  # =========================
-  docker-backend:
-    runs-on: ubuntu-latest
-    needs: [backend-test]
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Docker Login
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build & Push Backend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./Backend
-          push: true
-          tags: |
-            1tsh4dowz/devops-backend:${{ github.sha }}
-            1tsh4dowz/devops-backend:latest
-
-  # =========================
-  # Build & Push Frontend Image
-  # =========================
-  docker-frontend:
-    runs-on: ubuntu-latest
-    needs: [frontend-test]
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Docker Login
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build & Push Frontend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./Frontend
-          push: true
-          build-args: |
-            VITE_API_URL=http://localhost:8080
-          tags: |
-            1tsh4dowz/devops-frontend:${{ github.sha }}
-            1tsh4dowz/devops-frontend:latest
-
-  # =========================
-  # E2E + Cypress (รัน A0 บน CI ด้วย env เหมือน local)
+  # E2E + Cypress (รันทุกเทสต์เหมือน local)
   # =========================
   e2e:
     runs-on: ubuntu-latest
-    needs: [docker-backend, docker-frontend]
-    continue-on-error: true   # ถ้า A0 ล้ม ยังไม่ให้ workflow แดงทั้งอัน (จะเอาออกก็ได้ถ้าอยากให้แดง)
+    needs: [backend-test, frontend-test]
 
     steps:
       - uses: actions/checkout@v4
 
-      # ใช้ docker compose dev ปกติ (postgres + backend + frontend + อื่นๆ) เหมือนเวลานายรันบนเครื่อง
+      # ใช้ docker compose dev stack เหมือนที่รันบนเครื่อง
       - name: Start full stack with docker compose
         run: |
           docker compose up -d
@@ -133,6 +80,7 @@ jobs:
           for i in {1..90}; do
             if curl -fsS http://localhost:8080/actuator/health > /dev/null 2>&1; then
               echo "✅ Backend is healthy!"
+              echo "Backend health check response:"
               curl -s http://localhost:8080/actuator/health || true
               break
             fi
@@ -143,11 +91,12 @@ jobs:
               echo "==========================="
               echo "Docker Containers Status"
               echo "==========================="
-              docker compose ps
+              docker compose ps || true
               echo ""
               echo "==========================="
               echo "Backend Logs"
               echo "==========================="
+              # เผื่อ service name มีทั้ง backend หรือ spring-backend
               docker compose logs backend || docker compose logs spring-backend || true
               exit 1
             fi
@@ -169,6 +118,11 @@ jobs:
               echo "❌ Frontend failed to start!"
               echo ""
               echo "==========================="
+              echo "Docker Containers Status"
+              echo "==========================="
+              docker compose ps || true
+              echo ""
+              echo "==========================="
               echo "Frontend Logs"
               echo "==========================="
               docker compose logs frontend || docker compose logs frontend-dev || true
@@ -184,7 +138,7 @@ jobs:
           echo "==========================="
           echo "Docker Containers"
           echo "==========================="
-          docker compose ps
+          docker compose ps || true
 
       - uses: actions/setup-node@v4
         with:
@@ -198,7 +152,7 @@ jobs:
           restore-keys: |
             cypress-cache-${{ runner.os }}-
 
-      - name: Fix permissions for Frontend folder
+      - name: Fix permissions for Frontend folder (E2E)
         working-directory: Frontend
         run: sudo chown -R "$USER:$USER" .
 
@@ -218,7 +172,8 @@ jobs:
           curl -fsS http://localhost:8080/actuator/health
           curl -fsS http://localhost:5173 > /dev/null
 
-      - name: Run Cypress E2E Tests (A0)
+      # รัน Cypress ทุกเทสต์ (รวม A0) – ถ้าอยากกรองทีหลังค่อยมาแก้ spec เอาได้
+      - name: Run Cypress E2E Tests (all specs)
         working-directory: Frontend
         env:
           CYPRESS_BASE_URL: http://localhost:5173
@@ -226,7 +181,6 @@ jobs:
         run: |
           npx cypress run --headless \
             --browser chrome \
-            --spec cypress/e2e/Success/A0-e2e.cy.js \
             --config defaultCommandTimeout=20000,requestTimeout=20000,responseTimeout=30000,pageLoadTimeout=60000
 
       - name: Upload Cypress Screenshots
@@ -261,3 +215,55 @@ jobs:
       - name: Shutdown
         if: always()
         run: docker compose down -v
+
+  # =========================
+  # Build & Push Backend Image (หลังผ่าน test + e2e)
+  # =========================
+  docker-backend:
+    runs-on: ubuntu-latest
+    needs: [backend-test, frontend-test, e2e]
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Docker Login
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build & Push Backend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./Backend
+          push: true
+          tags: |
+            1tsh4dowz/devops-backend:${{ github.sha }}
+            1tsh4dowz/devops-backend:latest
+
+  # =========================
+  # Build & Push Frontend Image (หลังผ่าน test + e2e)
+  # =========================
+  docker-frontend:
+    runs-on: ubuntu-latest
+    needs: [backend-test, frontend-test, e2e]
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Docker Login
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build & Push Frontend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./Frontend
+          push: true
+          build-args: |
+            VITE_API_URL=http://localhost:8080
+          tags: |
+            1tsh4dowz/devops-frontend:${{ github.sha }}
+            1tsh4dowz/devops-frontend:latest
